--- a/hdocs.cabal
+++ b/hdocs.cabal
@@ -18,7 +18,6 @@ cabal-version:       >=1.8
 library
   hs-source-dirs: src
   exposed-modules:
-    HDocs.Args
     HDocs.Module
   build-depends:
     base == 4.6.*,
@@ -44,6 +43,7 @@ executable hdocs
     aeson == 0.6.*,
     bytestring == 0.10.*,
     containers == 0.5.*,
+    filepath == 1.3.*,
     network == 2.4.*,
     text == 0.11.*
 
@@ -53,4 +53,5 @@ test-suite test
   hs-source-dirs: tests
   build-depends:
     base == 4.6.*,
-    hdocs
+    hdocs,
+    containers == 0.5.*
