--- a/hdocs.cabal
+++ b/hdocs.cabal
@@ -23,6 +23,7 @@ library
     base == 4.6.*,
     aeson == 0.6.*,
     bytestring == 0.10.*,
+    filepath == 1.3.*,
     ghc == 7.6.*,
     ghc-paths == 0.1.*,
     haddock == 2.13.*,
