--- a/hdocs.cabal
+++ b/hdocs.cabal
@@ -1,5 +1,5 @@
 name:                hdocs
-version:             0.2.0.0
+version:             0.3.0.0
 synopsis:            Haskell docs tool
 description:
   Tool and library to get docs for installed packages and source files.
@@ -24,6 +24,8 @@ cabal-version:       >=1.8
 library
   hs-source-dirs: src
   exposed-modules:
+    HDocs.Base
+    HDocs.Haddock
     HDocs.Module
   build-depends:
     base == 4.6.*,
@@ -52,6 +54,7 @@ executable hdocs
     bytestring == 0.10.*,
     containers == 0.5.*,
     filepath == 1.3.*,
+    mtl == 2.1.*,
     network == 2.4.*,
     text == 0.11.*
 
