--- a/hdocs.cabal
+++ b/hdocs.cabal
@@ -1,5 +1,5 @@
 name:                hdocs
-version:             0.4.3.0
+version:             0.4.4.0
 synopsis:            Haskell docs tool
 description:
   Tool and library to get docs for installed packages and source files.
@@ -35,6 +35,7 @@ library
     base >= 4.7 && < 5,
     aeson >= 0.7.0,
     bytestring >= 0.10.0,
+    Cabal >= 1.22.2,
     filepath >= 1.3.0,
     ghc >= 7.8.1,
     ghc-paths >= 0.1.0,
