--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ env:
  - CABALVER=1.22 GHCVER=7.10.2
 
 before_install:
- - travis_retry sudo apt-get-repository -y ppa:hvr/ghc
+ - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
  - travis_retry sudo apt-get update
  - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
