--- a/hdocs.cabal
+++ b/hdocs.cabal
@@ -1,5 +1,5 @@
 name:                hdocs
-version:             0.4.4.1
+version:             0.4.4.2
 synopsis:            Haskell docs tool
 description:
   Tool and library to get docs for installed packages and source files.
@@ -61,6 +61,7 @@ executable hdocs
     bytestring >= 0.10.0,
     containers >= 0.5.0,
     filepath >= 1.3.0,
+    haddock-api >= 2.16.0 && < 2.17.0,
     mtl >= 2.1.0,
     network >= 2.4.0,
     text >= 1.1.0
