--- a/hdocs.cabal
+++ b/hdocs.cabal
@@ -31,16 +31,25 @@ library
     HDocs.Base
     HDocs.Haddock
     HDocs.Module
+  other-modules:
+    HDocs.Ghc.Compat
+  if impl(ghc >= 8.0)
+    build-depends:
+      ghc >= 8.0.0,
+      haddock-api >= 2.17.0 && < 2.18.0,
+      haddock-library == 1.4.*
+  if impl(ghc < 8.0)
+    build-depends:
+      ghc >= 7.8.1 && < 8.0.0,
+      haddock-api >= 2.16.0 && < 2.17.0,
+      haddock-library == 1.2.*
   build-depends:
     base >= 4.7 && < 5,
     aeson >= 0.7.0,
     bytestring >= 0.10.0,
     Cabal >= 1.22.2,
     filepath >= 1.3.0,
-    ghc >= 8.0.0,
     ghc-paths >= 0.1.0,
-    haddock-library == 1.4.*,
-    haddock-api >= 2.17.0 && < 2.18.0,
     containers >= 0.5.0,
     network >= 2.4.0,
     process >= 1.2.0,
@@ -59,7 +68,7 @@ executable hdocs
     bytestring >= 0.10.0,
     containers >= 0.5.0,
     filepath >= 1.3.0,
-    haddock-api >= 2.17.0 && < 2.18.0,
+    haddock-api,
     mtl >= 2.1.0,
     network >= 2.4.0,
     text >= 1.1.0
