--- a/hdocs.cabal
+++ b/hdocs.cabal
@@ -24,6 +24,10 @@ category:            Development
 build-type:          Simple
 cabal-version:       >=1.8
 
+source-repository head
+  type: git
+  location: git://github.com/mvoidex/hdocs.git
+
 library
   hs-source-dirs: src
   ghc-options: -fno-warn-tabs
