--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ env:
  - CABALVER=1.24 GHCVER=8.0.1
 
 before_install:
- - travis_retry sudo add-apt-repository -y ppa:hvr/ghc --force-yes
+ - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
  - travis_retry sudo apt-get update
- - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
+ - travis_retry sudo apt-get install --force-yes cabal-install-$CABALVER ghc-$GHCVER
  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
 
 install:
