--- a/hdocs.cabal
+++ b/hdocs.cabal
@@ -1,5 +1,5 @@
 name:                hdocs
-version:             0.5.2.0
+version:             0.5.2.1
 synopsis:            Haskell docs tool
 description:
   Tool and library to get docs for installed packages and source files.
@@ -37,7 +37,12 @@ library
     HDocs.Module
   other-modules:
     HDocs.Ghc.Compat
-  if impl(ghc >= 8.0)
+  if impl(ghc >= 8.2) && impl(ghc < 8.3)
+    build-depends:
+      ghc >= 8.2 && < 8.3,
+      haddock-api >= 2.18.0 && < 2.19.0,
+      haddock-library == 1.4.*
+  if impl(ghc >= 8.0) && impl(ghc < 8.2)
     build-depends:
       ghc >= 8.0.0,
       haddock-api >= 2.17.0 && < 2.18.0,
