--- a/hdocs.cabal
+++ b/hdocs.cabal
@@ -31,6 +31,7 @@ source-repository head
 library
   hs-source-dirs: src
   ghc-options: -fno-warn-tabs
+  default-language: Haskell2010
   exposed-modules:
     HDocs.Base
     HDocs.Haddock
@@ -89,6 +90,7 @@ library
 executable hdocs
   main-is: hdocs.hs
   hs-source-dirs: tools
+  default-language: Haskell2010
   ghc-options: -fno-warn-tabs
   build-depends:
     base >= 4.7 && < 5,
@@ -106,6 +108,7 @@ executable hdocs
 test-suite test
   type: exitcode-stdio-1.0
   main-is: Test.hs
+  default-language: Haskell2010
   hs-source-dirs: tests
   ghc-options: -fno-warn-tabs
   other-modules:
